add feature to categorize items

--- a/client/newQuestion.html
+++ b/client/newQuestion.html
@@ -3,6 +3,7 @@
     <fieldset>
       <legend>Lisää uusi</legend>
       {{> afQuickField name='question'}}
+      {{> afQuickField name='categories'}}
     </fieldset>
     <p>Vältä eksakteja tuotenimiä, mutta tarkenna ilmiötä mahdollisimman hyvin. Esimerkiksi ei <i>Netflix</i>, vaan <i>Tilausvideopalvelut (VOD)</i>.</p>
     <p>Lisäämäsi ilmiö lisätään välittömästi äänestettäväksi. Se näkyy ensin alimmaisena (koska järjestys on äänestysmäärien mukaan laskevasti).</p>
