--- a/client/trends.html
+++ b/client/trends.html
@@ -1,15 +1,34 @@
 <template name="Trends">
-  <center>
-    ‹‹‹ Asiat, joiden arvo/esiintyvyys laskee
-    <br>
-    Asiat, joiden arvo/esiintyvyys nousee ›››
+  <div class="row">
+    <p>Voit antaa äänesi ilmiölle painamalla ilmiön alta + / - / EOS / Ei muutosta. Plussa kertoo, että uskot, että kyseinen ilmiö tulee kasvamaan koronan myötä. Miinus kertoo, että kyseinen ilmiö vähenee koronan myötä.</p>
+    <p>V: XX | P: YY kertoo Vastauksien määrän (XX) ja pisteytyksen (YY). Pisteytys on karkeasti plussat - miinukset.</p>
+    <p>Sinisellä + -napilla voit lisätä/muokata ilmiön kategorioita ja oikealta ylhäältä Lisää uusi -linkistä saat lisättyä uuden ilmiön.</p>
+  </div>
+  <div class="row">
+    <div class="col-md-12">
+      <div class="btn-group btn-group-justified" role="group">
+        <div class="btn-group" role="group">
+          <button class="btn btn-info" style="background-image: linear-gradient(to right, red , green);">
+            <span class="pull-left">‹‹‹ Asiat, joiden arvo/esiintyvyys laskee</span>
+            
+            <span class="pull-right">Asiat, joiden arvo/esiintyvyys nousee ›››</span>
 
-  </center>
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+
 
   <div class="row">
     &nbsp;
   </div>
-  {{#each question in questions}}
+{{#each category in categories}}
+
+  <a id="{{category}}"></a>
+  <h3><span class="label label-primary">{{category}}</span></h3>
+
+  {{#each question in questions category}}
   <div class="col-md-4 col-md-offset-{{offsetCount question.netScore}}">
     <div class="row">
       <div>
@@ -21,7 +40,7 @@
                   {{question.netScore}}</span>
               </h4>
               {{#each category in question.categories}}
-              <span class="label label-primary">{{category}}</span>
+              <a href="#{{category}}"><span class="label label-primary">{{category}}</span></a>
               {{/each}}
               <a href="/question/{{question._id}}/edit"><span class="label label-primary category-modify">+</span></a>
             </button>
@@ -63,4 +82,5 @@
     &nbsp;
   </div>
   {{/each}}
+{{/each}}
 </template>
