add row to make some space. yep. i know.

--- a/client/trends.html
+++ b/client/trends.html
@@ -73,6 +73,9 @@
       <div class="row">
         &nbsp;
       </div>
+      <div class="row">
+        &nbsp;
+      </div>
       {{/each}}
     </div>
   </div>
